crates/schemas/tests/compile-fail/deprecated_temp_c.stderr
error[E0560]: struct `racing_wheel_schemas::prelude::TelemetryData` has no field named `temp_c`
  --> tests/compile-fail/deprecated_temp_c.rs:10:9
   |
10 |         temp_c: 45,  // Should be temperature_c
   |         ^^^^^^ `racing_wheel_schemas::prelude::TelemetryData` does not have this field
   |
   = note: available fields are: `temperature_c`
